--- a/app/views/ctf/_text.html.haml
+++ b/app/views/ctf/_text.html.haml
@@ -1,5 +1,5 @@
 .row
   .col-sm-10{style: 'width:175px'}
-    = text_field_tag 'answer', nil, class: 'form-control'
+    = text_field_tag 'answer', nil, class: 'form-control', required: true
   .col-sm-2.right
     = submit_tag 'Submit', class: 'btn btn-success'
