--- a/app/views/ctf/index.html.haml
+++ b/app/views/ctf/index.html.haml
@@ -3,15 +3,16 @@
 - if @flag_categories.any?
   .row
     - @flag_categories.each do |category|
-      .col-sm-3
-        .panel.panel-default
-          .panel-heading
-            .center= link_to category.name, ctf_flag_category_path(category.uuid)
-          .panel-body
-            = category.description
-          .panel-footer
-            .progress
-              .progress-bar.progress-bar-success.progress-bar-striped.active{style: "width: #{category.flags.select{ |flag| current_user.answered_correctly?(flag) }.count.to_f / category.flags.count.to_f * 100}%"}
-              .progress-bar.progress-bar-danger.progress-bar-striped.active{style: "width: #{category.flags.select{ |flag| !current_user.answered_correctly?(flag) && current_user.completed_flag?(flag) }.count.to_f / category.flags.count.to_f * 100}%"}
+      .col-sm-4.col-md-3.nounderline
+        = link_to(ctf_flag_category_path(category.uuid), class: 'no-underline') do
+          .panel.panel-default
+            .panel-heading
+              .center= category.name
+            .panel-body
+              = category.description
+            .panel-footer
+              .progress
+                .progress-bar.progress-bar-success.progress-bar-striped.active{style: "width: #{category.flags.select{ |flag| current_user.answered_correctly?(flag) }.count.to_f / category.flags.count.to_f * 100}%"}
+                .progress-bar.progress-bar-danger.progress-bar-striped.active{style: "width: #{category.flags.select{ |flag| !current_user.answered_correctly?(flag) && current_user.completed_flag?(flag) }.count.to_f / category.flags.count.to_f * 100}%"}
 - else
   %i no event scheduled
