--- a/app/views/ctf/index.html.haml
+++ b/app/views/ctf/index.html.haml
@@ -3,7 +3,7 @@
 - if @flag_categories.any?
   .row
     - @flag_categories.each do |category|
-      .col-sm-4.col-md-3.nounderline
+      .col-sm-4.col-md-3
         = link_to(ctf_flag_category_path(category.uuid), class: 'no-underline') do
           .panel.panel-default
             .panel-heading
@@ -11,6 +11,10 @@
             .panel-body
               = category.description
             .panel-footer
+              - if Setting.flag_show_points.value == 'true'
+                .center
+                  +
+                  = category.flag_submissions.correct.where(user: current_user).map{ |submission| submission.flag.points }.compact.inject(:+) || 0
               .progress
                 .progress-bar.progress-bar-success.progress-bar-striped.active{style: "width: #{category.flags.select{ |flag| current_user.answered_correctly?(flag) }.count.to_f / category.flags.count.to_f * 100}%"}
                 .progress-bar.progress-bar-danger.progress-bar-striped.active{style: "width: #{category.flags.select{ |flag| !current_user.answered_correctly?(flag) && current_user.completed_flag?(flag) }.count.to_f / category.flags.count.to_f * 100}%"}
