move from public/system to storage/system
this involves moving the previous files to a new directory and changing
the routes around to make sure the user is authenticated to pull the
files. this was sort of a security issue that I noticed when playing
around with the application

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,32 +1,34 @@
-= show_header 'Event Details', @event
-.row
-  .col-sm-6
-    %p
-      %b Name:
-      = @event.name
-    %p
-      %b Schedule:
-      = @event.schedule
-%hr
-.row
-  .col-md-6
-    = header 'Injects', Inject, icon: :list
-    %table.table.table-striped
-      %thead
-        %tr
-          %th Title
-          %th Available At
-          %th Due At
-          %th
-      %tbody
-        - @event.injects.each do |inject|
+- if can? :manage, Event
+  = show_header 'Event Details', @event
+  .row
+    .col-sm-6
+      %p
+        %b Name:
+        = @event.name
+      %p
+        %b Schedule:
+        = @event.schedule
+  %hr
+  .row
+    .col-md-6
+      = header 'Injects', Inject, icon: :list
+      %table.table.table-striped
+        %thead
           %tr
-            %td= inject.title
-            %td= inject.available_at.strftime("%m/%d/%Y %H:%M")
-            %td= inject.due_at.strftime("%m/%d/%Y %H:%M")
-            %td.right
-              = link_to 'Available Now', available_now_inject_path(inject)
-              |
-              = object_actions [@event, inject]
-  .col-md-6
-    = render file: 'flag_categories/index'
+            %th Title
+            %th Available At
+            %th Due At
+            %th
+        %tbody
+          - @event.injects.each do |inject|
+            %tr
+              %td= inject.title
+              %td= inject.available_at.strftime("%m/%d/%Y %H:%M")
+              %td= inject.due_at.strftime("%m/%d/%Y %H:%M")
+              %td.right
+                - if can? :available_now, Inject
+                  = link_to 'Available Now', available_now_inject_path(inject)
+                  |
+                = object_actions [@event, inject]
+    .col-md-6
+      = render file: 'flag_categories/index'
